# boggle-zoo

./: .gitignore  Makefile  README.md  build.sh  encode_all.sh  perf.sh  pyproject.toml
.claude/: settings.local.json
boggle/: args.py  boggler.py  boggler_test.py  constants.py  dimensional_bogglers.py  encode_dict.py  hillclimb.py  neighbors.py  perf.py  score.py  trie_test.py
cpp/: board_class_boggler.h  boggler.h  compact_dictionary.cc  compact_dictionary.h  compact_trie.cc  compact_trie.h  constants.h  cpp_boggle.cc  neighbors.h  prefix_dictionary.cc  prefix_dictionary.h  test_compact_dict.cc  trie.cc  trie.h
wordlists/: twl06.20char.txt
